--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "@emotion/babel-plugin": "^11.2.0",
+    "@emotion/styled": "^11.1.5",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.1",
     "autoprefixer": "^10.2.5",
