--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,12 @@
 name: Test
 on: ['push']
 jobs:
-  name: run tests
-  runs-on: ubuntu-latest
-  - name: Check Out Code
-    uses: actions/checkout@v2
-  - name: Setup Node
-    uses: actions/setup-node@v2
-  - run: 'ls -al'
+  first-job:
+    name: run tests
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check Out Code
+      uses: actions/checkout@v2
+    - name: Setup Node
+      uses: actions/setup-node@v2
+    - run: 'ls -al'
