--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,8 +5,10 @@ jobs:
     name: run tests
     runs-on: ubuntu-latest
     steps:
-    - name: Check Out Code
-      uses: actions/checkout@v2
-    - name: Setup Node
-      uses: actions/setup-node@v2
-    - run: 'ls -al'
+      - name: Check Out Code
+        uses: actions/checkout@v2
+      - name: Setup Node
+        uses: actions/setup-node@v2
+      - name: 🛠 Build App
+        run: 'yarn build:prod'
+      - run: 'ls -al'
